<resources>
    <string name="app_name">Vokabeltrainer BUS 2018</string>
    <string name="btn_learn">Zum Üben</string>
    <string name="btn_writeVocab">Zum Vokabelheft</string>
    <string name="lbl_points">Deine Punkte</string>
    <string name="txt_pointsSum">0000</string>
    <string name="btn_solution">Weiss es nicht</string>
    <string name="dsc_ffw">SRH Berufliche Bilgung fit for work GmbH Offenburg</string>
    <string name="dsc_spi">My logo - Spi</string>
    <string name="btn_new">Nächstes Wort</string>
    <string name="txt_true">Richtig. 10 Punkte</string>
    <string name="txt_wrong">Falsch. Weiter mit Weiss es nicht oder Nächstes Wort</string>
    <string name="txt_question">Vokabel</string>
    <string name="txt_english">Englisches Wort</string>
    <string name="txt_german">Deutsche Übersetzung</string>
    <string name="txt_write">Speichern</string>
    <string name="dsc_blank"></string>
    <string name="txt_please_type">bitte hier eingeben</string>
    <string name="btn_amIRight">Hab ich recht?</string>
    <string name="txt_description">Lege jetzt erste Vokabeln an.</string>
    <string name="btn_okay">OK</string>
</resources>
