<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VokabelExercise"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/id_txt_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="53dp"
        android:focusable="false"
        android:gravity="center"
        android:text="@string/txt_pointsSum"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/id_txt_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_lbl_points"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_lbl_points"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginLeft="67dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="158dp"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:text="@string/lbl_points"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/id_txt_answer"
        app:layout_constraintEnd_toStartOf="@+id/id_txt_points"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_txt_question"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:layout_marginBottom="152dp"
        android:focusable="false"
        android:gravity="center"
        android:text="@string/txt_question"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/id_btn_new"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_txt_points" />

    <EditText
        android:id="@+id/id_txt_answer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="250dp"
        android:gravity="center"
        android:hint="@string/txt_please_type"
        android:importantForAutofill="no"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:text="@string/dsc_blank"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        android:typeface="normal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/id_txt_varExercise"
        app:layout_constraintTop_toBottomOf="@+id/id_txt_varExercise"
        tools:targetApi="o" />

    <Button
        android:id="@+id/id_btn_solution"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginBottom="159dp"
        android:text="@string/btn_solution"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/id_btn_new"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_txt_answer"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/id_btn_new"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginBottom="51dp"
        android:text="@string/btn_new"
        app:layout_constraintBottom_toTopOf="@+id/id_btn_vocabularyII"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_btn_solution"
        app:layout_constraintTop_toBottomOf="@+id/id_txt_question" />

    <Button
        android:id="@+id/id_btn_vocabularyII"
        android:layout_width="180dp"
        android:layout_height="0dp"
        android:layout_marginBottom="46dp"
        android:text="@string/btn_writeVocab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_btn_new" />

    <TextView
        android:id="@+id/id_txt_varExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="172dp"
        android:layout_marginBottom="16dp"
        android:text="@string/txt_variable"
        app:layout_constraintBottom_toTopOf="@+id/id_txt_answer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>