<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VokabelScreen"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/id_btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:text="@string/btn_learn"
        android:textAllCaps="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/id_btn_vocabularyII"
        app:layout_constraintEnd_toStartOf="@+id/id_btn_vocabularyII"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/id_img_ffw"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="77dp"
        android:contentDescription="@string/dsc_ffw"
        app:layout_constraintBottom_toTopOf="@+id/id_btn_vocabularyII"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ffwog" />

    <Button
        android:id="@+id/id_btn_vocabularyII"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="99dp"
        android:text="@string/btn_writeVocab"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/id_img_spi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_btn_start"
        app:layout_constraintTop_toBottomOf="@+id/id_img_ffw" />

    <ImageView
        android:id="@+id/id_img_spi"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/dsc_spi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_btn_vocabularyII"
        app:srcCompat="@drawable/logola" />

</android.support.constraint.ConstraintLayout>