<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImportTxt"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/id_txt_english"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:text="@string/txt_english"
        app:layout_constraintBottom_toTopOf="@+id/id_txt_german"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_txt_german"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginBottom="60dp"
        android:text="@string/txt_german"
        app:layout_constraintBottom_toTopOf="@+id/id_btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_txt_english" />

    <Button
        android:id="@+id/id_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/txt_write"
        app:layout_constraintBottom_toTopOf="@+id/id_btn_exit"
        app:layout_constraintStart_toStartOf="@+id/id_btn_exit"
        app:layout_constraintTop_toBottomOf="@+id/id_txt_german" />

    <Button
        android:id="@+id/id_btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/txt_homeScreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_btn_save" />

</android.support.constraint.ConstraintLayout>